@@ -1,6 +1,7 @@
 Revision history for Perl extension PGXN-API-Searcher.
 
 0.9.4
+      - Upgraded from KinoSearch to Lucy.
 
 0.9.3   2011-05-12T18:11:02
       - Backported to support Perl 5.10.
@@ -14,7 +15,7 @@ Revision history for Perl extension PGXN-API-Searcher.
       - First release to CPAN.
 
 0.9.0   2011-04-20T05:35:52
-      - Switched back to KinoSearch::Search::QueryParser. It's more tolerant
+      - Switched back to Lucy::Search::QueryParser. It's more tolerant
         of the crazy stuff users can submit, and with the addition of user
         lists in the latest version of PGXN::API, we no longer need wildcard
         searches.
